redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redissvc
  labels:
    app: guestbook
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    nodePort: 30080
    name: redis-port0
  selector:
    app: guestbook
